--- a/style/main.css
+++ b/style/main.css
@@ -45,7 +45,7 @@ button:hover {
 
 /* Main Menu Styling */
 [data-screen="main"] {
-
+	background-image: url("../assets/scenes/forest.jpg");
 }
 
 /* Main Menu Buttons Styling */
